LogiFlow/despliegue-ymls/billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          image: alexis425/logiflow-billing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5004
          readinessProbe:
            httpGet:
              path: /
              port: 5004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5004
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: logiflow
spec:
  selector:
    app: billing-service
  ports:
    - port: 5004
      targetPort: 5004
