LogiFlow/despliegue-ymls/fleet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-service
  template:
    metadata:
      labels:
        app: fleet-service
    spec:
      containers:
        - name: fleet-service
          image: alexis425/logiflow-fleet:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
          readinessProbe:
            httpGet:
              path: /
              port: 5003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5003
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-service
  namespace: logiflow
spec:
  selector:
    app: fleet-service
  ports:
    - port: 5003
      targetPort: 5003
