LogiFlow/despliegue-ymls/graphql-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql-service
  template:
    metadata:
      labels:
        app: graphql-service
    spec:
      containers:
        - name: graphql-service
          image: alexis425/logiflow-graphql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
          readinessProbe:
            httpGet:
              path: /
              port: 5006
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5006
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
  namespace: logiflow
spec:
  selector:
    app: graphql-service
  ports:
    - port: 5006
      targetPort: 5006
