LogiFlow/despliegue-ymls/pedido-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedido-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedido-service
  template:
    metadata:
      labels:
        app: pedido-service
    spec:
      containers:
        - name: pedido-service
          image: alexis425/logiflow-pedido:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pedido-service
  namespace: logiflow
spec:
  selector:
    app: pedido-service
  ports:
    - port: 5002
      targetPort: 5002
