LogiFlow/despliegue-ymls/realtime-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-service
  template:
    metadata:
      labels:
        app: realtime-service
    spec:
      containers:
        - name: realtime-service
          image: alexis425/logiflow-realtime:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
          readinessProbe:
            httpGet:
              path: /
              port: 5005
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5005
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: realtime-service
  namespace: logiflow
spec:
  selector:
    app: realtime-service
  ports:
    - port: 5005
      targetPort: 5005
